Migration: rushx format

--- a/sdk/formrecognizer/ai-form-recognizer/tsconfig.json
+++ b/sdk/formrecognizer/ai-form-recognizer/tsconfig.json
@@ -4,9 +4,7 @@
     "preserveConstEnums": true,
     "module": "NodeNext",
     "paths": {
-      "@azure/ai-form-recognizer": [
-        "./src/index"
-      ]
+      "@azure/ai-form-recognizer": ["./src/index"]
     },
     "skipLibCheck": true,
     "moduleResolution": "NodeNext",
