--- a/sdk/ai/ai-projects/package.json
+++ b/sdk/ai/ai-projects/package.json
@@ -60,6 +60,7 @@
     "@azure/core-rest-pipeline": "^1.5.0",
     "@azure/core-util": "^1.9.0",
     "@azure/logger": "^1.1.4",
+    "@azure/core-lro": "^2.0.0",
     "tslib": "^2.6.2",
     "@azure/core-paging": "^1.5.0",
     "@azure/core-sse": "^2.1.3"
