--- a/sdk/remoterendering/mixed-reality-remote-rendering/package.json
+++ b/sdk/remoterendering/mixed-reality-remote-rendering/package.json
@@ -5,9 +5,7 @@
   "sdk-type": "client",
   "main": "dist/index.js",
   "module": "dist-esm/src/index.js",
-  "browser": {
-    "./dist-esm/test/utils/env.js": "./dist-esm/test/utils/env.browser.js"
-  },
+  "browser": "./dist/browser/index.js",
   "types": "types/mixed-reality-remote-rendering.d.ts",
   "//metadata": {
     "constantPaths": [
@@ -26,15 +24,15 @@
     ]
   },
   "scripts": {
-    "build": "npm run clean && tsc -p . && dev-tool run bundle && dev-tool run extract-api",
-    "build:browser": "tsc -p . && dev-tool run bundle",
-    "build:node": "tsc -p . && dev-tool run bundle",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
+    "build:browser": "dev-tool run build-package && dev-tool run bundle",
+    "build:node": "dev-tool run build-package && dev-tool run bundle",
     "build:samples": "echo Obsolete.",
-    "build:test": "tsc -p . && dev-tool run bundle",
+    "build:test": "dev-tool run build-package && dev-tool run bundle",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "clean": "dev-tool run vendored rimraf --glob dist dist-* test-dist temp types *.tgz *.log",
     "execute:samples": "dev-tool samples run samples-dev",
-    "extract-api": "tsc -p . && dev-tool run extract-api",
+    "extract-api": "dev-tool run build-package && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "generate:client": "autorest --typescript ./swagger/README.md",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
@@ -47,14 +45,12 @@
     "test:browser": "npm run build:test && npm run unit-test:browser && npm run integration-test:browser",
     "test:node": "npm run build:test && npm run unit-test:node && npm run integration-test:node",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
-    "unit-test:browser": "dev-tool run test:browser",
-    "unit-test:node": "dev-tool run test:node-ts-input --timeout 1200000 --full-trace 'test/**/*.spec.ts'",
+    "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "unit-test:node": "dev-tool run test:vitest",
     "update-snippets": "echo skipped"
   },
   "files": [
     "dist/",
-    "dist-esm/src/",
-    "types/mixed-reality-remote-rendering.d.ts",
     "README.md",
     "LICENSE"
   ],
@@ -89,36 +85,23 @@
     "tslib": "^2.2.0"
   },
   "devDependencies": {
-    "@azure-tools/test-recorder": "^3.0.0",
+    "@azure-tools/test-recorder": "^4.1.0",
+    "@azure-tools/test-utils-vitest": "^1.0.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
     "@azure/identity": "^4.0.1",
-    "@types/chai": "^4.1.6",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/mocha": "^10.0.0",
     "@types/node": "^18.0.0",
     "@types/uuid": "^8.0.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
+    "@vitest/browser": "^2.1.6",
+    "@vitest/coverage-istanbul": "^2.1.6",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
     "inherits": "^2.0.3",
-    "karma": "^6.2.0",
-    "karma-chrome-launcher": "^3.0.0",
-    "karma-coverage": "^2.0.0",
-    "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-json-preprocessor": "^0.3.3",
-    "karma-json-to-file-reporter": "^1.0.1",
-    "karma-junit-reporter": "^2.0.1",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "mocha": "^10.0.0",
-    "nyc": "^17.0.0",
-    "ts-node": "^10.0.0",
+    "playwright": "^1.49.0",
     "typescript": "~5.6.2",
     "util": "^0.12.1",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "vitest": "^2.1.6"
   },
   "//sampleConfiguration": {
     "productName": "Azure Remote Rendering",
@@ -130,5 +113,21 @@
       "Azure Remote Rendering account": "https://docs.microsoft.com/azure/remote-rendering/how-tos/create-an-account",
       "Azure Storage account": "https://docs.microsoft.com/azure/storage/common/storage-account-create"
     }
+  },
+  "type": "module",
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    },
+    "dialects": [
+      "esm",
+      "commonjs"
+    ],
+    "esmDialects": [
+      "browser",
+      "react-native"
+    ],
+    "selfLink": false
   }
 }
