--- a/sdk/remoterendering/mixed-reality-remote-rendering/tsconfig.json
+++ b/sdk/remoterendering/mixed-reality-remote-rendering/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
-    "outDir": "./dist-esm",
-    "declarationDir": "./types",
     "paths": {
-      "@azure/mixed-reality-remote-rendering": ["./src/index"]
-    }
+      "@azure/mixed-reality-remote-rendering": [
+        "./src/index"
+      ]
+    },
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "."
   },
   "exclude": [
     "node_modules",
@@ -17,5 +20,13 @@
     "dist-esm",
     "./samples/**/*.ts"
   ],
-  "include": ["src/**/*.ts", "test/**/*.ts", "samples-dev/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts",
+    "test/**/*.mts",
+    "test/**/*.cts"
+  ]
 }
