--- a/sdk/batch/batch-rest/package.json
+++ b/sdk/batch/batch-rest/package.json
@@ -61,52 +61,49 @@
     "disableDocsMs": true
   },
   "dependencies": {
-    "@azure-rest/core-client": "^1.4.0",
-    "@azure/core-auth": "^1.6.0",
-    "@azure/core-paging": "^1.5.0",
-    "@azure/core-rest-pipeline": "^1.16.0",
-    "@azure/logger": "^1.0.0",
-    "tslib": "^2.6.2"
+    "@azure-rest/core-client": "^2.3.1",
+    "@azure/core-auth": "^1.9.0",
+    "@azure/core-paging": "^1.6.2",
+    "@azure/core-rest-pipeline": "^1.18.0",
+    "@azure/logger": "^1.1.4",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@azure-tools/test-credential": "^1.0.0",
-    "@azure-tools/test-recorder": "^4.0.0",
-    "@azure-tools/vite-plugin-browser-test-map": "~1.0.0",
+    "@azure-tools/test-credential": "^2.0.0",
+    "@azure-tools/test-recorder": "^4.1.0",
     "@azure/core-util": "^1.0.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
-    "@azure/identity": "^4.0.1",
+    "@azure/identity": "^4.5.0",
     "@types/node": "^18.0.0",
-    "@vitest/browser": "~1.6.0",
-    "@vitest/coverage-istanbul": "^1.3.1",
+    "@vitest/browser": "^2.1.6",
+    "@vitest/coverage-istanbul": "^2.1.6",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
-    "loupe": "~3.1.0",
-    "moment": "~2.30.1",
+    "moment": "^2.30.1",
     "playwright": "^1.41.2",
-    "prettier": "^3.2.5",
     "typescript": "~5.6.2",
-    "vitest": "~1.6.0"
+    "vitest": "^2.1.6"
   },
   "scripts": {
-    "build": "npm run clean && dev-tool run build-package && dev-tool run vendored mkdirp ./review && dev-tool run extract-api",
+    "build": "npm run clean && dev-tool run build-package && npm run extract-api",
     "build:samples": "echo skipped",
-    "build:test": "npm run clean && dev-tool run build-package && dev-tool run build-test",
+    "build:test": "echo skipped",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.{ts,cts,mts}\" \"test/**/*.{ts,cts,mts}\" \"*.{js,cjs,mjs,json}\"",
     "clean": "dev-tool run vendored rimraf --glob dist dist-browser dist-esm dist-test temp types *.tgz *.log",
     "execute:samples": "echo skipped",
+    "extract-api": "dev-tool run vendored rimraf review && dev-tool run vendored mkdirp ./review && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.{ts,cts,mts}\" \"test/**/*.{ts,cts,mts}\" \"*.{js,cjs,mjs,json}\"",
     "generate:client": "echo skipped",
-    "integration-test:browser": "echo skipped",
-    "integration-test:node": "echo skipped",
+    "integration-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "integration-test:node": "dev-tool run test:vitest",
     "lint": "eslint package.json api-extractor.json src test",
     "lint:fix": "eslint package.json api-extractor.json src test --fix --fix-type [problem,suggestion]",
-    "minify": "dev-tool run vendored uglifyjs -c -m --comments --source-map \"content='./dist/index.js.map'\" -o ./dist/index.min.js ./dist/index.js",
     "pack": "npm pack 2>&1",
     "test": "npm run clean && dev-tool run build-package && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser",
     "test:browser": "npm run clean && npm run build:test && npm run unit-test:browser && npm run integration-test:browser",
     "test:node": "npm run clean && dev-tool run build-package && npm run unit-test:node && npm run integration-test:node",
-    "unit-test:browser": "npm run build:test && dev-tool run test:vitest --browser",
+    "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
     "unit-test:node": "dev-tool run test:vitest",
     "update-snippets": "echo skipped"
   },
