--- a/sdk/contentsafety/ai-content-safety-rest/tsp-location.yaml
+++ b/sdk/contentsafety/ai-content-safety-rest/tsp-location.yaml
@@ -1,4 +1,4 @@
 directory: specification/cognitiveservices/ContentSafety
 commit: d85dc63616d14d9790b224d46aad024e3461955b
-repo: Azure/azure-rest-api-specs
-additionalDirectories:
+repo: ../azure-rest-api-specs
+additionalDirectories: 
