--- a/sdk/eventgrid/eventgrid-namespaces/package.json
+++ b/sdk/eventgrid/eventgrid-namespaces/package.json
@@ -13,9 +13,9 @@
     "cloud"
   ],
   "license": "MIT",
-  "main": "./dist/index.js",
-  "module": "./dist-esm/src/index.js",
-  "types": "./types/eventgrid-namespaces.d.ts",
+  "main": "./dist/commonjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/commonjs/index.d.ts",
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/eventgrid/eventgrid-namespaces/README.md",
   "repository": "github:Azure/azure-sdk-for-js",
   "bugs": {
@@ -53,8 +53,8 @@
     "extract-api": "dev-tool run build-package && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
-    "integration-test:browser": "dev-tool run test:browser",
-    "integration-test:node": "dev-tool run test:node-js-input -- --timeout 5000000 \"dist-esm/test/**/*.spec.js\"",
+    "integration-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "integration-test:node": "dev-tool run test:vitest",
     "lint": "eslint package.json api-extractor.json src test",
     "lint:fix": "eslint package.json api-extractor.json src test --fix --fix-type [problem,suggestion]",
     "pack": "npm pack 2>&1",
@@ -69,15 +69,15 @@
   "sideEffects": false,
   "autoPublish": false,
   "dependencies": {
-    "@azure-rest/core-client": "^1.3.1",
-    "@azure/core-auth": "^1.7.0",
-    "@azure/core-client": "^1.5.0",
-    "@azure/core-rest-pipeline": "^1.1.3",
-    "@azure/core-util": "^1.6.1",
-    "@azure/eventgrid": "^5.4.0",
-    "@azure/logger": "^1.0.0",
+    "@azure-rest/core-client": "^2.3.1",
+    "@azure/core-auth": "^1.9.0",
+    "@azure/core-client": "^1.9.2",
+    "@azure/core-rest-pipeline": "^1.18.0",
+    "@azure/core-util": "^1.11.0",
+    "@azure/eventgrid": "^5.8.0",
+    "@azure/logger": "^1.1.4",
     "buffer": "^6.0.0",
-    "tslib": "^2.2.0"
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@azure-tools/test-credential": "^2.0.0",
@@ -85,10 +85,7 @@
     "@azure-tools/test-utils-vitest": "^1.0.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
-    "@azure/identity": "^4.1.0",
-    "@azure/service-bus": "^7.0.0",
     "@types/node": "^18.0.0",
-    "@types/uuid": "^8.0.0",
     "@vitest/browser": "^2.1.6",
     "@vitest/coverage-istanbul": "^2.1.6",
     "dotenv": "^16.0.0",
@@ -113,5 +110,26 @@
     ],
     "selfLink": false
   },
-  "browser": "./dist/browser/index.js"
+  "browser": "./dist/browser/index.js",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "browser": {
+        "types": "./dist/browser/index.d.ts",
+        "default": "./dist/browser/index.js"
+      },
+      "react-native": {
+        "types": "./dist/react-native/index.d.ts",
+        "default": "./dist/react-native/index.js"
+      },
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
+    }
+  }
 }
