--- a/sdk/easm/defender-easm-rest/tsconfig.json
+++ b/sdk/easm/defender-easm-rest/tsconfig.json
@@ -2,9 +2,7 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure-rest/defender-easm": [
-        "./src/index"
-      ]
+      "@azure-rest/defender-easm": ["./src/index"]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
