Migration: Update package.json, tsconfig.json, and api-extractor.json

--- a/sdk/identity/identity-vscode/tsconfig.json
+++ b/sdk/identity/identity-vscode/tsconfig.json
@@ -2,13 +2,26 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "target": "es6",
-    "lib": ["DOM"],
-    "declarationDir": "./types",
-    "outDir": "./dist-esm",
+    "lib": [
+      "DOM"
+    ],
     "resolveJsonModule": true,
     "paths": {
-      "@azure/identity-vscode": ["./src/index"]
-    }
+      "@azure/identity-vscode": [
+        "./src/index"
+      ]
+    },
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "."
   },
-  "include": ["src/**/*", "test/**/*", "samples-dev/**/*"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts",
+    "test/**/*.mts",
+    "test/**/*.cts"
+  ]
 }
